--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div class="video-item">
                     <div class="column">
                         <video class="video-player big-video" controls preload="none" poster="content/images/10435.png" data-src="content/videos/object/10435.mp4"></video>
-                        <p class="caption">The sound of a song playing while a person prepares two beverages by pouring liquids, adding ice, and stirring.</p>
+                        <p class="caption">The sound of a person prepares two beverages by pouring liquids, adding ice, and stirring.</p>
                     </div>
                     <div class="column">
                         <video class="video-player big-video" controls preload="none" poster="content/images/27109.png" data-src="content/videos/object/27109.mp4"></video>
@@ -428,6 +428,41 @@
                     <div class="column">
                         <video class="video-player big-video" controls preload="none" poster="content/images/8381.png" data-src="content/videos/voice/8381.mp4"></video>
                         <p class="caption">The sound of footsteps on the snow in a serene winter forest.</p>
+                    </div>
+                </div>
+
+                <!-- ASMR Sound Effect -->
+                <div style="display: flex; justify-content: center;align-items: center; height: 80px;">
+                    <h3 class="title is-4">ASMR Sound Effect</h3>
+                </div>
+                <div class="video-item">
+                    <div class="column">
+                        <video class="video-player big-video" controls preload="none" poster="content/images/1005.png" data-src="content/videos/asmr/1005.mp4"></video>
+                        <p class="caption">The sound of fingernails scratching the floor.</p>
+                    </div>
+                    <div class="column">
+                        <video class="video-player big-video" controls preload="none" poster="content/images/23053.png" data-src="content/videos/asmr/23053.mp4"></video>
+                        <p class="caption">The sound of a knife scraping a pink, translucent block.</p>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="column">
+                        <video class="video-player big-video" controls preload="none" poster="content/images/25737.png" data-src="content/videos/asmr/25737.mp4"></video>
+                        <p class="caption">The sound of tweezers picking up and moving colorful square-shaped candies.</p>
+                    </div>
+                    <div class="column">
+                        <video class="video-player big-video" controls preload="none" poster="content/images/25743.png" data-src="content/videos/asmr/25743.mp4"></video>
+                        <p class="caption">The sound of a shimmering tambourine and repetitive chime bells melody.</p>
+                    </div>
+                </div>
+                <div class="video-item">
+                    <div class="column">
+                        <video class="video-player big-video" controls preload="none" poster="content/images/25750.png" data-src="content/videos/asmr/25750.mp4"></video>
+                        <p class="caption">The sound of a cat-shaped cutting tool slicing through a white foam tube.</p>
+                    </div>
+                    <div class="column">
+                        <video class="video-player big-video" controls preload="none" poster="content/images/41189.png" data-src="content/videos/asmr/41189.mp4"></video>
+                        <p class="caption">The sound of a person gently squeezing a heart-shaped object during an ASMR activity.</p>
                     </div>
                 </div>
 
